Issues and missing codes in the PaymentList UI control have been fixed and completed.

--- a/design_files/sale.toml
+++ b/design_files/sale.toml
@@ -33,3 +33,14 @@ width = 300
 height = 400
 location_x = 720
 location_y = 340
+
+[[design]]
+type = "payment_list"
+caption = "PaymentList"
+function = "PLU"
+background_color = 0x778D45
+foreground_color = 0xFFFFFF
+width = 400
+height = 400
+location_x = 315
+location_y = 340
