feat: Add country-specific closure template system
- Added ClosureCountrySpecific model for flexible country-specific closure data
- Implemented JSON template system in static_files/closures/
- Supports 200+ countries without separate models per country
- Templates auto-load based on country/state code
- Includes templates for TR, USA (CA/NY/TX), DE, FR, GB, JP
- Templates can be managed via SaleFlex.GATE

--- a/settings.toml
+++ b/settings.toml
@@ -1,6 +1,6 @@
 [app]
 version = "1.0.0b2"
-icon = "design_files\\images\\saleflex.ico"
+icon = "static_files\\images\\saleflex.ico"
 
 [database]
 engine = "sqlite"
